--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node_version: "18"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          node-version: "18"
+          cache: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
       - name: Restore cache
         uses: actions/cache@v3
         with:
